k8s_config/overlays/production/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - app.bitpull.io
      secretName: letsencrypt-frontend
  rules:
    - host: app.bitpull.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: frontend
              servicePort: http
          - path: /
            backend:
              serviceName: frontend
              servicePort: http
